strategic-deal-assurance/force-app/main/default/objects/Demo_Business_Rule__mdt/Demo_Business_Rule__mdt.object-meta.xml
<CustomObject><description>Optional synthetic CRM save guards. Enable one rule at a time for controlled demos.</description><label>Demo Business Rule</label><pluralLabel>Demo Business Rules</pluralLabel><visibility>Public</visibility></CustomObject>