strategic-deal-assurance/force-app/main/default/objects/Demo_Business_Rule__mdt/fields/Enabled__c.field-meta.xml
<CustomField><fullName>Enabled__c</fullName><defaultValue>false</defaultValue><fieldManageability>SubscriberControlled</fieldManageability><label>Enabled</label><type>Checkbox</type></CustomField>