strategic-deal-assurance/force-app/main/default/objects/Demo_Business_Rule__mdt/fields/Instructions__c.field-meta.xml
<CustomField><fullName>Instructions__c</fullName><fieldManageability>SubscriberControlled</fieldManageability><label>Demo Instructions</label><type>TextArea</type></CustomField>