strategic-deal-assurance/force-app/main/default/objects/Demo_Business_Rule__mdt/fields/Number_Value__c.field-meta.xml
<CustomField><fullName>Number_Value__c</fullName><precision>16</precision><scale>2</scale><fieldManageability>SubscriberControlled</fieldManageability><label>Numeric Value (USD for Opportunity)</label><type>Number</type></CustomField>