strategic-deal-assurance/force-app/main/default/objects/Demo_Business_Rule__mdt/fields/Required_Value__c.field-meta.xml
<CustomField><fullName>Required_Value__c</fullName><length>80</length><fieldManageability>SubscriberControlled</fieldManageability><label>Required Value (Lead Status)</label><type>Text</type></CustomField>