strategic-deal-assurance/force-app/main/default/objects/Demo_Business_Rule__mdt/fields/Rule_Version__c.field-meta.xml
<CustomField><fullName>Rule_Version__c</fullName><length>80</length><fieldManageability>SubscriberControlled</fieldManageability><label>Rule Version</label><type>Text</type></CustomField>